[project]
name = "pyfloat_sh1l0n"
version = "0.0.1"
authors = [
    { name="Jesus Manresa Parres", email="dev-jesusmanresaparres@protonmail.com" },
]

description = "Python Library for doing math operations with floats without lossing precission"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

keywords = ["decimal", "float", "double", "truncate", "floor", "math"]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/sh1l0n/pyfloats"
repository = "https://github.com/sh1l0n/pyfloats"